# project_K-ERA

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile.api  LICENSE  README.md  app.py  case_history.txt  diff_output.txt  docker-compose.yml  make_figures.py  package-lock.json  pyproject.toml  requirements-cpu.txt  requirements-gpu-cu128.txt  requirements.txt  run_ssl_overnight_plan.cmd  run_transformer_weekend_plan.cmd  run_transformer_weekend_supervisor.cmd  tmp-paper-buddy-index.js  tmp-paper-buddy.css
.claude/: settings.local.json
docs/: ai_clinic_llm_setup.md  case-workspace-refactor-roadmap.md  case_canvas_redesign_plan_ko.md  control_plane_local_first_dev.md  control_plane_split_migration.md  css_design_system_plan.md  dataset_schema.md  desktop-installed-smoke.md  federation-salt-migration.md  fl_operation_sop_ko.md  local_node_deployment.md  react_migration_checklist.md  tauri-embedded-ui-plan.md  tauri-embedded-ui-status-plan.md  tauri-migration-plan.md  tauri-packaged-runtime-layout.md
frontend/: Dockerfile.web  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json  tauri.dev.conf.json  tauri.next.dev.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: desktop_analysis_commands.rs  desktop_analysis_request_types.rs  desktop_artifact_helpers.rs  desktop_auth_json_helpers.rs  desktop_backend_python_candidates.rs  desktop_backend_target_env.rs  desktop_backend_target_resolution.rs  desktop_bundled_runtime.rs  desktop_case_ai_clinic_run_commands.rs  desktop_case_analysis_commands.rs  desktop_case_artifacts.rs  desktop_case_display_helpers.rs  desktop_case_history_artifacts.rs  desktop_case_image_query_commands.rs  desktop_case_image_row_mappers.rs  desktop_case_lookup_queries.rs  desktop_case_mutation_helpers.rs  desktop_case_mutations.rs  desktop_case_normalization_helpers.rs  desktop_case_preview_artifacts.rs  desktop_case_preview_commands.rs  desktop_case_queries.rs  desktop_case_query_commands.rs  desktop_case_request_types.rs  desktop_case_row_mappers.rs  desktop_case_row_parser_helpers.rs  desktop_case_run_commands.rs  desktop_case_summary_query_commands.rs  desktop_case_validation_run_commands.rs  desktop_command_helpers.rs  desktop_config_store.rs  desktop_config_types.rs  desktop_data_helpers.rs  desktop_database_helpers.rs  desktop_diagnostics.rs  desktop_federation_helpers.rs  desktop_image_blob_artifacts.rs  desktop_image_mutations.rs  desktop_image_quality.rs  desktop_job_streams.rs  (+62 more)
frontend/src-tauri/wix/: generate_notice_bitmaps.py
storage/: kera.db
(+658 files in other folders)
